# grpc-audio-streaming-rust

./: README.md
audio-play-test/: .gitignore  Cargo.toml
audio-play-test/src/: main.rs
audio-stream-grpc-rs/: .gitignore  Cargo.toml  build.rs
audio-stream-grpc-rs/proto/: audiostream.proto
audio-stream-grpc-rs/src/: client.rs  server.rs
helloworld-grpc-tutorial/: Cargo.toml  build.rs
helloworld-grpc-tutorial/proto/: helloworld.proto
helloworld-grpc-tutorial/src/: client.rs  main.rs  server.rs
routeguide-grpc-tutorial/: Cargo.toml  build.rs
routeguide-grpc-tutorial/src/: client.rs  server.rs
